@@ -44,11 +44,11 @@ use JSON;
 
 my $plugin = Bloonix::Plugin->new(verion => "0.2");
 
-$plugin->info(
+$plugin->info(join(" ",
     "Please install PhantomJS on the server where the plugin is exexuted.",
-    "Install the command phantomjs to /usr/lib/bloonix/bin, /usr/local/lib/bloonix/bin"
+    "Install the command phantomjs to /usr/lib/bloonix/bin, /usr/local/lib/bloonix/bin",
     "or to a path of the PATH variable."
-);
+));
 
 $plugin->add_option(
     name => "workflow",
@@ -85,8 +85,9 @@ my ($phantomjs, $bloonix_wtrm_js);
 if (-e "/usr/local/lib/bloonix/bin/phantomjs") {
     $phantomjs = "/usr/local/lib/bloonix/bin/phantomjs";
 } elsif (-e "/usr/lib/bloonix/bin/phantomjs") {
-    $phantomjs = "/usr/lib/lib/bloonix/bin/phantomjs";
+    $phantomjs = "/usr/lib/bloonix/bin/phantomjs";
 } else {
+    $ENV{PATH} = join(":", $ENV{PATH}, "/usr/local/bin");
     $phantomjs = qx{which phantomjs};
     chomp $phantomjs;
 }
