@@ -1,3 +1,7 @@
+bloonix-plugins-wtrm (0.4) released at 2014-XX-XX
+
+    * Fixed UA setting in bloonix-wtrm.js.
+
 bloonix-plugins-wtrm (0.3) released at 2014-11-26
 
     * Install bloonix-wtrm.js.
